# diagrams-worklow

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  diagram_agent.py  prompts.py
src/models/: schemas.py
src/tools/: __init__.py  diagram_tools.py  validators.py
src/utils/: file_manager.py
tests/: test_agent.py  test_api.py  test_integration.py  test_tools.py
